Fixing bug 336017, keyword.enable doesn't work in Camino 1.8 or trunk. Patch by foodian <stridey@gmail.com> r=smorgan, sr=pink